--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,4 +5,7 @@
   <p>投稿ユーザー画像：<%= image_tag 'sample-author1.jpg' %></p>
   <p>ユーザーネーム：<%= @book.user.name %></p>
   <p>投稿日：<%= @book.created_at.strftime('%Y/%m/%d') %></p>
+  <% if @book.user == current_user %>
+    <%= link_to "削除", book_path(@book), method: :delete %>
+  <% end %>
 </div>
