--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,1 @@
-<% @books.each do |book| %>
-  <div>
-    <%= link_to book_path(book.id) do %>
-    <%= image_tag book.get_image %>
-    <% end %>
-    <%= image_tag book.get_image %>
-    <p>投稿ユーザー画像：<%= image_tag 'sample-author1.jpg' %></p>
-    <p>タイトル：<%= book.title %></p>
-    <p>説明：<%= book.body %></p>
-    <p>ユーザーネーム：<%= book.user.name %></p>
-  </div>
-<% end %>
+<%= render 'list', books: @books %>
