--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>新しい本</h1>
+<h2>Editing Book</h2>
 <% if @book.errors.any? %>
   <%= @book.errors.count %>件のエラーが発生しました
   <ul>
@@ -9,9 +9,11 @@
 <% end %>
 
 <%= form_with model: @book do |f| %>
-  <h4>title</h4>
+  <h4>タイトル</h4>
   <%= f.text_field :title %>
-  <h4>body</h4>
+
+  <h4>本文</h4>
   <%= f.text_area :body %>
-  <%= f.submit '投稿' %>
+
+  <%= f.submit '保存' %>
 <% end %>
