--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,5 +7,6 @@
   <p>投稿日：<%= @book.created_at.strftime('%Y/%m/%d') %></p>
   <% if @book.user == current_user %>
     <%= link_to "削除", book_path(@book), method: :delete %>
+    <%= link_to "編集", edit_book_path(@book.id) %>
   <% end %>
 </div>
