--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,31 +1,22 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <div id="error_explanation">
-        <% if @book.errors.any? %>
-        <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
-        <ul>
-          <% @book.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-        </ul>
-        <% end %>
-      </div>
+<div>
+  <div>
+    <div>
       <h1>Editing Book</h1>
-      <%= form_with model: @book do |f| %>
-        <div class="form-group">
-          <label for="Title">Title</label>
-          <%= f.text_field :title, class: "form-control book_title" %>
+      <%= form_with model: @book, mothod: :patch do |f| %>
+        <div>
+          <%= f.label :title %>
+          <%= f.text_field :title %>
         </div>
-        <div class="form-group">
-          <label for="Opinion">Opinion</label>
-          <%= f.text_area :body,class: "form-control book_body"%>  
+        <div>
+          <%= f.label :opinion %>
+          <%= f.text_area :body %>
         </div>
-        <div class="form-group">
-          <%= f.submit "Update Book" ,class: "btn btn-success"%>
+        <div>
+          <%= f.submit "Update Book" %>
         </div>
       <% end %>
-      <%= link_to "Show", book_path(@book.id) %>
+
+      <%= link_to "Show", book_path(@book) %>
       |
       <%= link_to "Back", books_path %>
     </div>
