--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,12 +1,45 @@
+<h2>New book</h2>
+<%= form_with model: @new_book do |f| %>
+  <div>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+  </div>
+  <div>
+    <%= f.label :opinion %>
+    <%= f.text_area :body %>
+  </div>
+  <div>
+    <%= f.submit 'Create Book' %>
+  </div>
+<% end %>
 <div>
-  <%= image_tag @book.get_image %>
-  <p>ショップ名：<%= @book.title %></p>
-  <p>説明：<%= @book.body %></p>
-  <p>投稿ユーザー画像：<%= image_tag @book.user.get_profile_image(100,100) %></p>
-  <p>ユーザーネーム：<%= @book.user.name %></p>
-  <p>投稿日：<%= @book.created_at.strftime('%Y/%m/%d') %></p>
-  <% if @book.user == current_user %>
-    <%= link_to "削除", book_path(@book), method: :delete %>
-    <%= link_to "編集", edit_book_path(@book.id) %>
-  <% end %>
+  <h2>Book detail</h2>
+  <table>
+    <tbody>
+      <tr>
+        <td>
+          <%= link_to user_path(@user) do %>
+            <%= image_tag @user.get_profile_image(80,80) %><br>
+            <%= @user.name %>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to book_path(@book) do %>
+            <%= @book.title %>
+          <% end %>
+        </td>
+        <td>
+          <%= @book.body %>
+        </td>
+          <% if @user == current_user %>
+        <td>
+          <%= link_to "Edit", edit_book_path(@book)%>
+        </td>
+        <td>
+          <%= link_to "Destroy", book_path(@book), method: :delete %>
+        </td>
+      <% end %>
+      </tr>
+    </tbody>
+  </table>
 </div>
