レイアウト

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,46 +1,12 @@
-<h2>New book</h2>
-<%= form_with model: @book do |f| %>
-  <div>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-  </div>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'users/info', user: @user %>
+      <%= render 'new', book: @book %>
+    </div>
 
-  <div>
-    <%= f.label :opinion %>
-    <%= f.text_area :body %>
+    <div class="col-md-8 offset-md-1">
+      <%= render 'index', books: @books %>
+    </div>
   </div>
-
-  <div>
-    <%= f.submit 'Create Book' %>
-  </div>
-<% end %>
-
-<div>
-  <h2>Books</h2>
-  <table>
-    <thead>
-      <tr>
-        <th></th>
-        <th>Title</th>
-        <th>Opinion</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @books.each do |book| %>
-        <tr>
-          <td>
-            <%= link_to user_path(book.user_id) do %>
-              <%= image_tag book.user.get_profile_image(80,80) %>
-            <% end %>
-            </td>
-          <td>
-            <%= link_to book_path(book.id) do %>
-              <%= book.title %>
-            <% end %>
-            </td>
-          <td><%= book.body %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
 </div>
