--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,38 +12,11 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-<body>
+  <body>
     <header>
-      <nav>
-        <div>
-          <%= link_to 'Bookers', root_path %>
-        </div>
-        <ul>
-          <li>
-            <%= link_to root_path do %>
-              <i class="fas fa-home" aria-hidden="true"> Home</i>
-            <% end %>
-          </li>
-          <li>
-            <%= link_to about_path do %>
-              <i class="fas fa-link" aria-hidden="true"> About</i>
-            <% end %>
-          </li>
-          <li>
-            <%= link_to new_user_registration_path do %>
-              <i class="fas fa-user-plus" aria-hidden="true"> Sign up</i>
-            <% end %>
-          </li>
-          <li>
-            <%= link_to new_user_session_path do %>
-              <i class="fas fa-sign-in-alt" aria-hidden="true"> Log in</i>
-            <% end %>
-          </li>
-        </ul>
-      </nav>
+      <%= render 'layouts/header' %>
     </header>
     <%= yield %>
-    </main>
     <footer>
       <div class="container mt-5">
         <div class="row">
