--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,51 +1,15 @@
-<div>
-  <div>
-    <div>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
       <!--ユーザー情報-->
-      <h2>User info</h2>
-      <%= image_tag @user.get_profile_image(100,100) %>
-      <table>
-        <tbody>
-          <tr></tr>
-          <tr>
-            <th>name</th>
-            <th><%= @user.name %></th>
-          </tr>
-          <tr>
-            <th>introduction</th>
-            <th><%= @user.introduction %></th>
-          </tr>
-        </tbody>
-      </table>
-
-      <div>
-        <%= link_to edit_user_path(@user) do %>
-          <i class="fas fa-user-cog"></i>
-        <% end %>
-      </div>
-
+      <%= render 'info', user: @user %>
       <!--本の投稿機能-->
-      <h2>New book</h2>
-      <%= form_with model: @book do |f| %>
-        <div>
-          <%= f.label :title %>
-          <%= f.text_field :title %>
-        </div>
-        <div>
-          <%= f.label :opinion %>
-          <%= f.text_area :body %>
-        </div>
-        <div>
-          <%= f.submit 'Create Book' %>
-        </div>
-      <% end %>
+      <%= render 'books/new', book: @book %>
     </div>
-
-
-    <!--ユーザーの一覧表示-->
-    <div>
+    <!--ユーザー一覧表示-->
+    <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
-      <table>
+      <table class="table">
         <thead>
           <tr>
             <th>image</th>
