--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,15 @@
-<!-- ユーザーの詳細 -->
-<div>
-  <h3><%= @user.name %></h3>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <% if @user == current_user %>
-    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-  <% end %>
-</div>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <!--ユーザー情報-->
+      <%= render 'info', user: @user %>
+      <!--本の投稿機能-->
+      <%= render 'books/new', book: @book %>
+    </div>
 
-<!-- ユーザーの投稿一覧 -->
-<%= render 'books/list', books: @books %>
+    <div class="col-md-8 offset-md-1">
+      <!--ユーザーが投稿した本の一覧機能-->
+      <%= render 'books/index', books: @books %>
+    </div>
+  </div>
+</div>
