--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h1>Editing Book</h1>
+      <%= render 'layouts/error', obj: @book %>
       <%= form_with model: @book, mothod: :patch do |f| %>
         <div class="form-group">
           <%= f.label :title %>
