--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
   </head>
 
   <body>
+      <main>
+        <p class="notice"><%= notice %></p>
+          <%= yield %>
+      </main>
     <header>
       <%= render 'layouts/header' %>
     </header>
